# K0K4-FRONTEND

./: .env  .gitignore  package-lock.json  package.json
b2gpl-frontend/: .prettierignore  package-lock.json  package.json
b2gpl-frontend/public/: index.html  manifest.json
b2gpl-frontend/src/: App.js  AppBreadcrumb.js  AppFooter.js  AppTopbar copy.js_backup  AppTopbar.js  AppWrapper.js  index.js
client/: package-lock.json  package.json
client/layout/: AppMenu.js
client/pages/: _document.js  index.js
client/public/: manifest.json
client/src/: index.css
demo/actions/: posts.js
demo/api/: index.js
demo/reducers/: auth.js
demo/service/: CarouselPosts.js
k4ndy/: next.config.js  package-lock.json  package.json
k4ndy/layout/: AppConfig.js  AppMenu.js  AppMenuitem.js  AppProfileSidebar.js  AppSidebar.js  (+1 more)
layout/: AppMenuitem.js  AppSidebar.js  AppTopbar.js
pages/: index.js  index.js_backup_11_07_2023
server/: .env  Cargo.toml  aux_env  index.js
server/controllers/: posts.js  user.js
server/models/: postMessage.js  user.js
server/routes/: posts.js
server/src/: main.rs
server/src/api/: post_api.rs
server/src/models/: post_model.rs  user_model.rs
server/src/repository/: mongodb_repo.rs
server/src/responces/: mod.rs
server_v2/: .env  Cargo.toml  local_env
server_v2/src/: main.rs
server_v2/src/api/: post_api.rs  user_api.rs
server_v2/src/middleware/: auth_middleware.rs
server_v2/src/models/: auth_model.rs  mod.rs  post_model.rs  user_model.rs
server_v2/src/repository/: mongodb_repo.rs
server_v2/src/responces/: user_respo.rs
(+157 files in other folders)
