[package]
name = "actix-mongo-api-jwt"
version = "0.1.0"
authors = ["Edwin Ortega <edwin.maurizio.ortega@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
actix-cors = "0.6.4"
jsonwebtoken = "8.2.0"
argon2 = "0.5.1"
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"] }



[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]